Sat Oct 16 06:13:23 GMT 2010  Olly Betts <olly@survex.com>

	* configure.ac: Probe for any options needed to enable large file
	  support.  Handling files >= 2GB isn't especially useful, but more
	  importantly this is needed to allow omindex to index files on filing
	  systems with 64 bit inodes on some platforms (e.g. 32-bit Linux).

Mon Oct 11 11:11:07 GMT 2010  Olly Betts <olly@survex.com>

	* Makefile.am: Drop special case to remove man pages on "make clean"
	  in maintainer-mode.

Wed Sep 29 04:14:21 GMT 2010  Olly Betts <olly@survex.com>

	* Makefile.am,configure.ac,query.cc,unixperm.cc,unixperm.h: Pull out
	  permission checks into a separate file and check Unix user and group
	  permissions based on environmental variable REMOTE_USER, if set.

Tue Sep 28 08:06:00 GMT 2010  Olly Betts <olly@survex.com>

	* Makefile.am: Ship common/realtime.h.

Tue Sep 28 06:32:10 GMT 2010  Olly Betts <olly@survex.com>

	* query.cc: Apply permission filters if USER and/or GROUP are set.

Tue Sep 28 06:14:50 GMT 2010  Olly Betts <olly@survex.com>

	* ./: Update svn:externals to latest common from xapian-core.
	* query.cc: Use RealTime::now() to time running the query.  Include
	  more enquire set-up in the time.

Tue Sep 28 05:26:07 GMT 2010  Olly Betts <olly@survex.com>

	* omindex.cc: Index file owner and read permissions, to allow finding
	  documents with a particular owner, and so searches can be restricted
	  to documents a user is able to read.
	* docs/termprefixes.rst: Document term prefixes used by the above.

Tue Sep 28 05:20:01 GMT 2010  Olly Betts <olly@survex.com>

	* diritor.h: Rename get_other_read() to is_other_readable() for
	  consistency.

Tue Sep 28 04:16:55 GMT 2010  Olly Betts <olly@survex.com>

	* diritor.cc,diritor.h: Rearrange so that the setting of statbuf_valid
	  gets inlined so the compiler should be able to optimise out
	  subsequent calls to call_stat().

Tue Sep 28 04:10:28 GMT 2010  Olly Betts <olly@survex.com>
